# singularity

./: .gitignore  CMakeLists.txt  README.md  activity_index_calculator.cpp  emission.cpp  gravity_index_calculator.cpp  ncd_aware_rank.cpp  page_rank.cpp  page_rank_alt.cpp  relations.cpp  scan.cpp  social_index_calculator.cpp  utils.cpp
include/: abstract_index_calculator.hpp  activity_index_calculator.hpp  emission.hpp  exporter.hpp  filters.hpp  git_version.hpp.in  gravity_index_calculator.hpp  mapped_matrix_resizable.hpp  ncd_aware_rank.hpp  page_rank.hpp  page_rank_alt.hpp  rank_calculator_factory.hpp  rank_interface.hpp  relations.hpp  scan.hpp  singularity.hpp  social_index_calculator.hpp  timelog.hpp  utils.hpp  validator.hpp  vector_based_matrix.hpp  version.hpp  version.hpp.in
tests/: CMakeLists.txt  activity_index_calculator.cpp  emission.cpp  gravity_index_calculator.cpp  mapped_matrix_resizable.cpp  page_rank.cpp  scan.cpp  social_index_calculator.cpp  utils.cpp
