add_executable(test_gravity_index_calculator "gravity_index_calculator.cpp")
add_executable(test_activity_index_calculator "activity_index_calculator.cpp")
add_executable(test_scan "scan.cpp")
add_executable(test_utils "utils.cpp")
# add_executable(test_emission "emission.cpp")
add_executable(test_mapped_matrix_resizable "mapped_matrix_resizable.cpp")
add_executable(test_social_index_calculator "social_index_calculator.cpp")

target_link_libraries(test_gravity_index_calculator singularity )
target_link_libraries(test_activity_index_calculator singularity )
target_link_libraries(test_scan singularity )
target_link_libraries(test_utils singularity )
# target_link_libraries(test_emission singularity )
target_link_libraries(test_mapped_matrix_resizable singularity )
target_link_libraries(test_social_index_calculator singularity )

enable_testing ()

add_test(NAME test_gravity_index_calculator COMMAND test_gravity_index_calculator)
add_test(NAME test_activity_index_calculator COMMAND test_activity_index_calculator)
add_test(NAME test_scan COMMAND test_scan)
add_test(NAME test_utils COMMAND test_utils)
# add_test(NAME test_emission COMMAND test_emission)
add_test(NAME test_mapped_matrix_resizable COMMAND test_mapped_matrix_resizable)
add_test(NAME test_social_index_calculator COMMAND test_social_index_calculator)

